--- a/about.html
+++ b/about.html
@@ -18,12 +18,13 @@
             	 <li><a href="colored.html">colored</a></li>
         	 </ul>
     		</li>
+        <li><a href="events.html">events</a></li>
     		<li><a href="about.html">about</a></li>
    		 <li><a href="contact.html">contact</a></li>
 		</ul>
 	</div>
 	</div>
-		 
+  <hr class="custom-hr">	 
 	<div id="content" >
     <div class="subscribtion_top">
       <p>  
@@ -129,10 +130,10 @@
                 Kunst/Mitte, Messe für Zeitgenössische Kunst – YoungArtistSpace, Magdeburg<br>
                 „Täglich geöffnet“, Projektraum Boesner, Leipziger Baumwollspinnerei<br>
                 “Parcours. Diplome der Burg”<br>
-                    “FRESH LEGS 2019”, Galerie Heike Arndt, Berlin<br>
+                 “FRESH LEGS 2019”, Galerie Heike Arndt, Berlin<br>
                 “Verorten_Entorten”/”Located_relocated” - Exhibition of international artists with
-            migration experience, Projekwohnung Krudebude e.V., Leipzig (conception and co-curation)<br>
-                  “Täglich geöffnet”, Galerie Volkspark, Halle<br>
+                migration experience, Projekwohnung Krudebude e.V., Leipzig (conception and co-curation)<br>
+                “Täglich geöffnet”, Galerie Volkspark, Halle<br>
             </td>
             </tr>
               <tr>
@@ -159,7 +160,7 @@
           </div>
 	
     </div>
-							   
+    <hr class="custom-hr">					   
     <div id="footer">
       <p id="currientYear"></p>
     </div>
