--- a/contact.html
+++ b/contact.html
@@ -16,35 +16,35 @@
 					 <li><a href="colored.html">colored</a></li>
 				 </ul>
 				</li>
+				<li><a href="events.html">events</a></li>
 				<li><a href="about.html">about</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
 		</div>
 		</div>
 		
-		 
+		<hr>	 
 	<div id="content">
-	<h1>contact</h1>
-<p align=center><b>Impressum:</b></p>
-<p align=center>Alica Khaet</p>
-<p align=center>Willy-Lohmann-Str. 8</p>	
-<p align=center>06114 Halle (Saale)</p>
-<p align=center><img src="gmail.jpg" width="10"> &nbsp; alicekhaet(at)gmail.com</p>
+	
+<p><b>Impressum:</b></p>
+<p>Alica Khaet</p>
+<p>Willy-Lohmann-Str. 8</p>	
+<p>06114 Halle (Saale)</p>
+<p><img src="gmail.jpg" width="10"> &nbsp; alicekhaet(at)gmail.com</p>
 
-<p align=center><a href="https://www.facebook.com/alisa.khaet?ref=br_tf"><img src="fb.jpg" width="10"> &nbsp; Facebook</a></p>
+<p><a href="https://www.facebook.com/alisa.khaet?ref=br_tf"><img src="fb.jpg" width="10"> &nbsp; Facebook</a></p>
 
-<p align=center><a href="https://www.instagram.com/alicakhaet/"><img src="inst.jpg" width="10"> &nbsp; Instagram </a></p>
+<p><a href="https://www.instagram.com/alicakhaet/"><img src="inst.jpg" width="10"> &nbsp; Instagram </a></p>
 
 	</div>
 		 
 	<form action="subscribe" method="post">
-		<label for="email">Подпишитесь на нашу рассылку:</label>
-		<input type="email" id="email" name="email" placeholder="Введите ваш email" required>
-		<button type="submit">Подписаться</button>
-	  </form>
-		 
-	</div>
-							   
+		<label for="email">Join my mail list and get latest news about art exhibitions!</label>
+		<input type="email" id="email" name="email" placeholder="enter your email" required>
+		<input type="text" id="text_name" name="name" placeholder="your name" required>
+		<button type="submit">subscribe</button>
+	</form>
+<hr>	 						   
 	<div id="footer">
 		<p id="currientYear"></p>
 	</div>
