--- a/etching.html
+++ b/etching.html
@@ -18,6 +18,7 @@
             	 <li><a href="colored.html">colored</a></li>
         	 </ul>
     		</li>
+			<li><a href="events.html">events</a></li>
     		<li><a href="about.html">about</a></li>
    		 <li><a href="contact.html">contact</a></li>
 		</ul>
@@ -49,15 +50,15 @@
 		<div class="modal-content">
 		  <span class="close">&times;</span>
 		  <img id="modal-image" src="" alt="Full-size image">
-		  <button id="prev">❮</button>
-		  <button id="next">❯</button>
+		  <button class="galleryButton" id="prev">❮</button>
+		  <button class="galleryButton" id="next">❯</button>
 		</div>
 	  </div>
 							   
 	<div id="footer">
-	<p>Halle 2018-2025</p>
+		<p id="currientYear"></p>
 	</div>
-</div>
+
 <script src="script.js"></script>
 </body>
 </html>
