--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
             	 <li><a href="colored.html">colored</a></li>
         	 </ul>
     		</li>
+			<li><a href="events.html">events</a></li>
     		<li><a href="about.html">about</a></li>
    		 <li><a href="contact.html">contact</a></li>
 		</ul>
 	</div>
+
 	</div>
 	
 	<div id="content">
@@ -32,9 +34,12 @@
 			<br>
 				Animated short film</p>
 		</div>
-		<div class="content_container">
-			<iframe title="Feferle (trailer)" src="https://player.vimeo.com/video/900619722?dnt=1&amp;app_id=122963" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" class="fluidvids-item" data-fluidvids="loaded"></iframe>
-		</div>
+		<div class="content_container_poster">
+			<a href="https://vimeo.com/900619722"><img src="feferle.png" alt="feferle poster" class=""></a>
+		</div>	
+		<!-- <div class="content_container">
+				<iframe title="Feferle (trailer)" src="https://player.vimeo.com/video/900619722?dnt=1&amp;app_id=122963" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" class="fluidvids-item" data-fluidvids="loaded"></iframe>
+		</div> -->
 		<div class="subscribtion_boddom">
 			<p>
 Feferle, a whimsical and childlike being, wakes one fateful day with the unsettling knowledge that something terrible has happened. Her world shatters due to the sudden loss of her father, propelling her into a poignant exploration of her family’s history. Tasked with sorting through the old cluttered apartment, Feferle contemplates whether she can approach the history of her Jewish family through the material remains and raw facts.
@@ -66,7 +71,7 @@ Kunststiftung Sachsen-Anhalt
 Stiftung Zurückgeben
 		</div>	
 	</div>
-		 				   
+	<hr class="custom-hr">		 				   
 	<div id="footer">
 		<p id="currientYear"></p>
 	</div>
