--- a/animation.html
+++ b/animation.html
@@ -18,6 +18,7 @@
             	 <li><a href="colored.html">colored</a></li>
         	 </ul>
     		</li>
+			<li><a href="events.html">events</a></li>
     		<li><a href="about.html">about</a></li>
    		 <li><a href="contact.html">contact</a></li>
 		</ul>
