--- a/colored.html
+++ b/colored.html
@@ -17,6 +17,7 @@
 					 <li><a href="colored.html">colored</a></li>
 				 </ul>
 				</li>
+				<li><a href="events.html">events</a></li>
 				<li><a href="about.html">about</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
@@ -43,8 +44,8 @@
 			<div class="modal-content">
 			  <span class="close">&times;</span>
 			  <img id="modal-image" src="" alt="Full-size image">
-			  <button id="prev">❮</button>
-			  <button id="next">❯</button>
+			  <button button class="galleryButton" id="prev">❮</button>
+			  <button button class="galleryButton" id="next">❯</button>
 			</div>
 		  </div>
 								   
