--- a/about.html
+++ b/about.html
@@ -23,8 +23,7 @@
    		 <li><a href="contact.html">contact</a></li>
 		</ul>
 	</div>
-	</div>
-  <hr class="custom-hr">	 
+	</div>	 
 	<div id="content" >
     <div class="subscribtion_top">
       <p>  
@@ -140,27 +139,29 @@
                 <td>2018</td>
               <td>“Land in Sicht?”, Dornrosa e.V., Frauenzentrum Weiberwirtschaft, Halle</td>
             </tr>
-              <tr>
-                <td>2016</td>
+            <tr>
+              <td>2016</td>
               <td>“Entdeckungen. Die Bücher der Burg”, Galerie Volkspark, Halle</td>
             </tr>
-              <tr>
-                <td>2015</td>
+            <tr>
+              <td>2015</td>
               <td>“Der Mensch ist ein Geheimnis”, Lyonel-Feininger-Galerie, Quedlinburg</td>
             </tr>
               <tr>
                 <td>2014</td>
-              <td>“Der Mensch ist ein Geheimnis”, Dostoevskij Museum, St.Petersburg, Russia</td>
-            </tr>
+                <td>“Der Mensch ist ein Geheimnis”, Dostoevskij Museum, St.Petersburg, Russia</td>
+              </tr>
 
             <tr>
               <th colspan="2">~</th>
             </tr>
+            <tr>
+              <th colspan="2"><a href="vita2023.pdf" download="vita2023.pdf" class="vitaBtn">download VITA</a></th>
+            </tr>
             </table>
           </div>
-	
     </div>
-    <hr class="custom-hr">					   
+					   
     <div id="footer">
       <p id="currientYear"></p>
     </div>
