--- a/colored.html
+++ b/colored.html
@@ -39,7 +39,7 @@
 </div>
 	</div>
 		 
-		  <!-- Модальное окно -->
+		  <!-- modal window -->
 		  <div id="modal" class="modal hidden">
 			<div class="modal-content">
 			  <span class="close">&times;</span>
