--- a/contact.html
+++ b/contact.html
@@ -8,43 +8,39 @@
 		<div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div>
 		<div id="navigation">
 			<ul class="menu">
-				<li><a href="animation.html">animation</a></li>
-				<li><a href=#>artworks</a>
+				<li><a href="animation.html" class="link">animation</a></li>
+				<li><a href=# class="link">artworks</a>
 				 <ul class="submenu">
-					 <li><a href="einZuhausefinden.html">ein Zuhause finden</a></li>
-					 <li><a href="etching.html">etching</a></li>
-					 <li><a href="colored.html">colored</a></li>
+					 <li><a href="einZuhausefinden.html" class="link">ein Zuhause finden</a></li>
+					 <li><a href="etching.html" class="link">etching</a></li>
+					 <li><a href="colored.html" class="link">colored</a></li>
 				 </ul>
 				</li>
-				<li><a href="events.html">events</a></li>
-				<li><a href="about.html">about</a></li>
-				<li><a href="contact.html">contact</a></li>
+				<li><a href="events.html" class="link">events</a></li>
+				<li><a href="about.html" class="link">about</a></li>
+				<li><a href="contact.html" class="link">contact</a></li>
 			</ul>
 		</div>
 		</div>
-		
-		<hr>	 
+			 
 	<div id="content">
-	
-<p><b>Impressum:</b></p>
-<p>Alica Khaet</p>
-<p>Willy-Lohmann-Str. 8</p>	
-<p>06114 Halle (Saale)</p>
-<p><img src="gmail.jpg" width="10"> &nbsp; alicekhaet(at)gmail.com</p>
-
-<p><a href="https://www.facebook.com/alisa.khaet?ref=br_tf"><img src="fb.jpg" width="10"> &nbsp; Facebook</a></p>
-
-<p><a href="https://www.instagram.com/alicakhaet/"><img src="inst.jpg" width="10"> &nbsp; Instagram </a></p>
-
+		<p><b>Impressum:</b></p>
+		<p>Alica Khaet</p>
+		<p>Willy-Lohmann-Str. 8</p>	
+		<p>06114 Halle (Saale)</p>
+		<p><img src="gmail.jpg" width="10"> &nbsp; alicekhaet(at)gmail.com</p>
+		<p><a href="https://www.facebook.com/alisa.khaet?ref=br_tf"><img src="fb.jpg" width="10"> &nbsp; Facebook</a></p>
+		<p><a href="https://www.instagram.com/alicakhaet/"><img src="inst.jpg" width="10"> &nbsp; Instagram </a></p>
 	</div>
-		 
-	<form action="subscribe" method="post">
-		<label for="email">Join my mail list and get latest news about art exhibitions!</label>
-		<input type="email" id="email" name="email" placeholder="enter your email" required>
-		<input type="text" id="text_name" name="name" placeholder="your name" required>
-		<button type="submit">subscribe</button>
-	</form>
-<hr>	 						   
+	<div class="form-div">	 
+		<form action="subscribe" method="post">
+			<label for="email">Join my mail list and get latest news about art exhibitions!</label>
+			<input type="email" id="email" name="email" placeholder="enter your email" required>
+			<input type="text" id="text_name" name="name" placeholder="your name" required>
+			<button type="submit">subscribe</button>
+		</form>
+	</div>
+	 						   
 	<div id="footer">
 		<p id="currientYear"></p>
 	</div>
