--- a/einZuhausefinden.html
+++ b/einZuhausefinden.html
@@ -23,8 +23,7 @@
 			</ul>
 		</div>
 		</div>
-		
-		<hr>	 
+			
 	<div id="content">
 	<h1>ein Zuhause finden</h1>
 	
@@ -48,17 +47,17 @@
 </div>
 	
 	</div>
-	  <!-- Модальное окно -->
-	  <div id="modal" class="modal hidden">
+    <!-- modal window -->
+	  <div id="modal" class="modal hidden"> 
 		<div class="modal-content">
 		  <span class="close">&times;</span>
 		  <img id="modal-image" src="" alt="Full-size image">
 		  <button button class="galleryButton" id="prev">❮</button>
 		  <button button class="galleryButton" id="next">❯</button>
 		</div>
-	  </div>
-	  <hr>					   
-	  <div id="footer">
+ 	  </div>
+
+	<div id="footer">
 		<p id="currientYear"></p>
 	</div>
 </div>
