--- a/einZuhausefinden.html
+++ b/einZuhausefinden.html
@@ -56,10 +56,17 @@
 		  <button button class="galleryButton" id="next">❯</button>
 		</div>
  	  </div>
-
-	<div id="footer">
+	   <div id="footer">
+		<div class="line"></div>	  
+		<div class="sociallinks">
+		  <div class="ig"><p><a href="https://www.instagram.com/alicakhaet/"><img src="inst.jpg" width="10"> Instagram </a></p></div>
+		  <div class="fb"><p><a href="https://www.facebook.com/alisa.khaet?ref=br_tf"><img src="fb.jpg" width="10"> Facebook</a></p>
+		  </div>
+		</div>
+		<div class="halle">
 		<p id="currientYear"></p>
-	</div>
+	  </div>
+	  </div>
 </div>
 <script src="script.js"></script>
 </body>
