--- a/index.html
+++ b/index.html
@@ -72,9 +72,18 @@ Stiftung Zurückgeben
 		</div>	
 	</div>	 				   
 	<div id="footer">
+		<div class="line"></div>	  
+		<div class="sociallinks">
+		  <div class="ig"><p><a href="https://www.instagram.com/alicakhaet/"><img src="inst.jpg" width="10"> Instagram </a></p></div>
+		  <div class="fb"><p><a href="https://www.facebook.com/alisa.khaet?ref=br_tf"><img src="fb.jpg" width="10"> Facebook</a></p>
+		  </div>
+		</div>
+		<div class="halle">
 		<p id="currientYear"></p>
-	</div>
-</div>
+	  </div>
+	  </div>
+  </div>
+
 <script src="script.js"></script>
 </body>
 </html>
