fonts, styles, arrows

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,9 @@
 <html>
-<head><title> contact </title>
-<link rel="stylesheet" href="style.css">
+<head>
+	<title>Contact / Alica Khaet</title>
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Faustina&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap" rel="stylesheet">
+
 </head>
 
 <div id="container">
