--- a/einZuhausefinden.html
+++ b/einZuhausefinden.html
@@ -1,12 +1,15 @@
 <html>
 <head>
-	<title> ein Zuhausefinden </title>
-<link rel="stylesheet" href="style.css">
+	<title>Ein Zuhause finden / Alica Khaaet </title>
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Faustina&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <div id="container">
 	<div id="header">
-		<div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div>
+		<img src="logo.png" alt="alica khaet" id="logo">
+		<!-- <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div> -->
 		<div id="navigation">
 			<ul class="menu">
 				<li><a href="animation.html">animation</a></li>
