--- a/events.html
+++ b/events.html
@@ -1,6 +1,9 @@
 <html>
-<head><title> Alica Khaet </title>
-<link rel="stylesheet" href="style.css">
+<head>
+	<title>Events / Alica Khaet </title>
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Faustina&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
