--- a/about.html
+++ b/about.html
@@ -1,13 +1,16 @@
 ﻿<html>
-<head><title> Alica Khaet </title>
+<head><title>About / Alica Khaet </title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Faustina&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 <div id="container">
 
 	<div id="header">
-    <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div>
+    <img src="logo.png" alt="alica khaet" id="logo">
+    <!-- <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div> -->
 	<div id="navigation">
 		<ul class="menu">
 			<li><a href="animation.html">animation</a></li>
@@ -25,14 +28,14 @@
 	</div>
 	</div>	 
 	<div id="content" >
-    <div class="subscribtion_top">
+    <div class="subscribtion_top" style="color: 363636;">
       <p>  
         Alica Khaet is Germany (Halle) based artist with russian-israeli background. Studied at Burg Giebichenstein University of Art and Design Halle, Bezalel Academy of Art and Design Jerusalem, Academy of Arts, Architecture and Design, Prague. Makes graphic Art, Illustration, animated movies. <br /><br />
       </p>  
     </div>
     
     <div class="content_container_table">
-            <table>
+            <table style="font-size: small;">
             <tr>
                 <td><h2>Alica Khaet</h2></td>
                 <td><img src="alica.jpg" width="50%"></td>
