--- a/colored.html
+++ b/colored.html
@@ -1,12 +1,15 @@
 <html>
-<head><title> colored </title>
-<link rel="stylesheet" href="style.css">
+<head>
+	<title>Colored / Alica Khaet</title>
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Faustina&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poiret+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
 <div id="container">
 	<div id="header">
-		<div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div>
+		<img src="logo.png" alt="alica khaet" id="logo">
+		<!-- <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div> -->
 		<div id="navigation">
 			<ul class="menu">
 				<li><a href="animation.html">animation</a></li>
@@ -43,9 +46,9 @@
 		  <div id="modal" class="modal hidden">
 			<div class="modal-content">
 			  <span class="close">&times;</span>
-			  <img id="modal-image" src="" alt="Full-size image">
-			  <button button class="galleryButton" id="prev">❮</button>
-			  <button button class="galleryButton" id="next">❯</button>
+			  <div><button button class="galleryButton" id="prev">❮</button></div>
+			  <div><img id="modal-image" src="" alt="Full-size image"></div> 
+			  <div><button button class="galleryButton" id="next">❯</button></div>
 			</div>
 		  </div>
 								   
