nihuja ne poluchilos

--- a/events.html
+++ b/events.html
@@ -10,7 +10,10 @@
 <div id="container">
 
 	<div id="header">
-	<div id="name"><h1>Alica Khaet</h1></div>
+		<a href="index.html">
+			<img src="logo.png" alt="alica khaet" id="logo">
+		</a>
+	<!-- <div id="name"><h1>Alica Khaet</h1></div> -->
 	<div id="navigation">
 		<ul class="menu">
 			<li><a href="animation.html">animation</a></li>
