--- a/about.html
+++ b/about.html
@@ -8,8 +8,12 @@
 <body>
 <div id="container">
 
-	<div id="header">
-    <img src="logo.png" alt="alica khaet" id="logo">
+	<div id="header"> 
+    <div class="logo_container">
+    <a href="index.html">
+			<img src="logo.png" alt="alica khaet" id="logo">
+		</a>
+  </div>
     <!-- <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div> -->
 	<div id="navigation">
 		<ul class="menu">
