--- a/colored.html
+++ b/colored.html
@@ -8,7 +8,9 @@
 <body>
 <div id="container">
 	<div id="header">
-		<img src="logo.png" alt="alica khaet" id="logo">
+		<a href="index.html">
+			<img src="logo.png" alt="alica khaet" id="logo">
+		</a>
 		<!-- <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div> -->
 		<div id="navigation">
 			<ul class="menu">
