--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,10 @@
 
 <div id="container">
 	<div id="header">
-		<div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div>
+		<a href="index.html">
+			<img src="logo.png" alt="alica khaet" id="logo">
+		</a>
+		<!-- <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div> -->
 		<div id="navigation">
 			<ul class="menu">
 				<li><a href="animation.html" class="link">animation</a></li>
@@ -27,7 +30,8 @@
 		</div>
 			 
 	<div id="content">
-		<p><b>Impressum:</b></p>
+		<div class="content_container_impressum">
+		<h3>Impressum:</h3>
 		<p>Alica Khaet</p>
 		<p>Willy-Lohmann-Str. 8</p>	
 		<p>06114 Halle (Saale)</p>
@@ -42,6 +46,8 @@
 			<input type="text" id="text_name" name="name" placeholder="your name" required>
 			<button type="submit">subscribe</button>
 		</form>
+	</div>
+	
 	</div>
 	 						   
     <div id="footer">
