--- a/about.html
+++ b/about.html
@@ -10,9 +10,9 @@
 
 	<div id="header"> 
     <div class="logo_container">
-    <a href="index.html">
-			<img src="logo.png" alt="alica khaet" id="logo">
-		</a>
+      <a href="index.html" id="logo-container">
+        <img src="logo.png" alt="alica khaet" id="logo">
+      </a>
   </div>
     <!-- <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div> -->
 	<div id="navigation">
