--- a/animation.html
+++ b/animation.html
@@ -9,7 +9,7 @@
 <div id="container">
 
 	<div id="header">
-		<a href="index.html">
+		<a href="index.html" id="logo-container">
 			<img src="logo.png" alt="alica khaet" id="logo">
 		</a>
 		<!-- <div id="name"><h1><a href="index.html">Alica Khaet</a></h1></div> -->
