--- a/events.html
+++ b/events.html
@@ -10,7 +10,7 @@
 <div id="container">
 
 	<div id="header">
-		<a href="index.html">
+		<a href="index.html" id="logo-container">
 			<img src="logo.png" alt="alica khaet" id="logo">
 		</a>
 	<!-- <div id="name"><h1>Alica Khaet</h1></div> -->
