--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <div id="container">
 
 	<div id="header">
-		<img src="logo.png" alt="alica khaet" id="logo">
+		<a href="index.html" id="logo-container">
+			<img src="logo.png" alt="alica khaet" id="logo">
+		</a>
 	<!-- <div id="name"><h1>Alica Khaet</h1></div> -->
 	<div id="navigation">
 		<ul class="menu">
